# koubou-system

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  DELEGATION_GUIDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  system_configuration_report.md
.archived/: enhanced_worker.py
.archived/codex-implementation/: codex-env.sh  codex-exec.sh  codex-lmstudio.sh  codex-lmstudio.toml  codex-ollama.sh  codex-secure.sh  codex-secure.toml  codex.toml  test-codex.sh
.archived/codex-worker-implementation/: local_worker.py  remote_worker_node.py
.archived/legacy-scripts/: README.md  mcp_server_legacy.py  start_system_legacy.sh
.archived/old_scripts/: check_lmstudio.sh  init_database.sql  setup_all.sh  setup_poc.sh  setup_poc_v2.sh
.config/cli/: auth.json
.koubou/: QUICK_START.md  README_SCRIPTS.md  start_full_system.sh  start_integrated_system.sh  start_system.sh  start_system_quick.sh  stop_system.sh  worker_helper.sh
.koubou/config/: agent.yaml  ollama_models.yaml  system.yaml  workers.yaml
.koubou/dashboard/: enhanced_dashboard_v2.html  index.html  index_old_with_mock.html
.koubou/gemini-env/: pyvenv.cfg
.koubou/scripts/: benchmark_test.py  gemini-repo-exec.sh  graphql_server.py  integration_test.py  lmstudio_proxy.py  load_test.py  master_notification_listener.py  mcp_distributed_bridge.py  mcp_server.py  test_graphql.py  test_integration.py  test_long_task.py  test_long_task.sh  test_remote_integration.py  test_sleep_task.sh  test_websocket.py  (+1 more)
.serena/: project.yml
demo/: gemini_test_output.py  sample_code.py  test_level_10_creative_project.md
docs/: COMPLETE_GUIDE.md  DELEGATION_GUIDE_EN.md  README.md  benchmark_report_20250831_003819.json  gemini-cli-lmstudio-setup.md  gemini-cli-security-configuration.md  gemini-repo-cli-evaluation.md  o3_codex_cli_consultation.md  ollamaの設定方法.md  test_worker_file.md
examples/: README.md  fib.py  fib_recursive.py  fibonacci.py  fibonacci_calc.py  measure_time.py  simple_timer.py  timed.py  timer_decorator.py  timing.py
gemini-repo-cli/: .gitignore  README.md  awesome-repo-cli.md  pyproject.toml  requirements.txt  safed_format.klmx  setup.py
gemini-repo-cli/docs/: api.md  contributing.md  getting_started.md  index.md  license.md
gemini-repo-cli/src/gemini_repo/: __init__.py  base_api.py  cli.py  gemini_api.py  ollama_api.py
tests/: test_abnormal_scenarios.py  test_core_functionality.py  test_database_manager.py  test_worker_components.py  test_worker_operations.py
utils/: measure_time.py
(+156 files in other folders)
